--- a/VideosDemo/VideosDemo.csproj
+++ b/VideosDemo/VideosDemo.csproj
@@ -231,6 +231,7 @@
     <Content Include="Views\Movies\Random.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\CheckingAccount\Details.cshtml" />
+    <Content Include="Views\CheckingAccount\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
