--- a/VideosDemo/VideosDemo.csproj
+++ b/VideosDemo/VideosDemo.csproj
@@ -165,11 +165,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606232010217_InitialCreate.cs" />
+    <Compile Include="Migrations\201606232010217_InitialCreate.Designer.cs">
+      <DependentUpon>201606232010217_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606232033557_AccountNumberChanges.cs" />
+    <Compile Include="Migrations\201606232033557_AccountNumberChanges.Designer.cs">
+      <DependentUpon>201606232033557_AccountNumberChanges.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CheckingAccount.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Movies.cs" />
+    <Compile Include="Models\Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
@@ -242,6 +252,14 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201606232010217_InitialCreate.resx">
+      <DependentUpon>201606232010217_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606232033557_AccountNumberChanges.resx">
+      <DependentUpon>201606232033557_AccountNumberChanges.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
