--- a/VideosDemo/VideosDemo.csproj
+++ b/VideosDemo/VideosDemo.csproj
@@ -181,14 +181,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201606232010217_InitialCreate.cs" />
-    <Compile Include="Migrations\201606232010217_InitialCreate.Designer.cs">
-      <DependentUpon>201606232010217_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201606232033557_AccountNumberChanges.cs" />
-    <Compile Include="Migrations\201606232033557_AccountNumberChanges.Designer.cs">
-      <DependentUpon>201606232033557_AccountNumberChanges.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CheckingAccount.cs" />
@@ -238,7 +230,9 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -276,14 +270,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201606232010217_InitialCreate.resx">
-      <DependentUpon>201606232010217_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201606232033557_AccountNumberChanges.resx">
-      <DependentUpon>201606232033557_AccountNumberChanges.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
